--- a/page.css
+++ b/page.css
@@ -32,14 +32,14 @@ header{
     background-color: var(--bg-color);
     height: 45px;
 }
+img.logo_main{
+    width: 50px;
+    margin-bottom: -5px;
+}
 a.logo {
-    color: grey;
-    padding: 10px;
     position: absolute;
     left: 50px;
     width: auto;
-
-
 }
 ul{
     right: 30px;
@@ -48,7 +48,7 @@ ul{
     width: auto;
     border: 1px solid transparent;
 }
-li{
+li.nav{
     margin: 0;
     display: inline-block;
     transition: all 0.1s ease-in;
@@ -56,16 +56,25 @@ li{
 }
 a.nav_a{
     color: white;
-
     padding: 10px;
 }
 
-li:hover{
+li.nav:hover{
     transform: scale(1.1);
     border-radius: 10px;
     background-color: rgb(5, 24, 37);
 }
 /* for home page*/
+.section_page{
+    left: 0px;
+    height: 821px;
+    border: 1px solid transparent;
+}
+
+
+section.home{
+    background-color: rgb(167, 167, 19);
+}
 section{
     padding:120px 16% 90px;
 }
@@ -88,13 +97,16 @@ color: var(--main-color);
     padding-bottom: 20px;
 }
 h1.name{
-    font-size: 40px;
+    font-size: 70px;
     color: white;
     padding-bottom: 20px;
     
 }
+.name_color{
+    color: var(--main-color);
+}
 h3.hello-front{
-    color: white;
+    color: var(--second-color);
     padding-bottom: 40px;
 }
 a.btn{
@@ -112,19 +124,15 @@ a.btn:hover{
 }
 
 /*about us*/
-.section-page{
-    position: relative;
-    top: 45px;
-    left: 0px;
-    height: 775px;
-    border: 1px solid transparent;
+section.about{
+    background-color: green;
 }
+
 .about-us{
     border: 1px solid transparent;
-    padding: 260px 5% 45px 40%;
 }
-.about-me{
-    font-size: 40px;
+.name.about-me{
+    font-size: 60px;
     color: white;
     padding-bottom: 20px;
 }
@@ -133,15 +141,23 @@ p.myself{
     color: lightgrey;
     padding-bottom: 20px;
 }
-ol{
-
-    display: flex;
-   margin-left: -25px;
-
-    border: 1px solid transparent;
-    padding-bottom: 30px
+ol.talent{
+    margin-bottom: 40px;
+    display: block;
+    list-style-type: decimal;
 }
+li.feature{
+    margin-bottom: 20px;
+    font-size: larger;
+    color: rgb(244, 233, 204);
+    display: block;
+}
+
+
 /*services*/
+section.service{
+    background-color: gray;
+}
 .service{
     text-align: center;
     position: relative;
@@ -176,6 +192,11 @@ ol{
 
 
 /*shoe design*/
+section.portfolioi{
+    margin-top: -25px;
+
+    background-color: rgb(255, 255, 255);
+}
 .card{
     height: 550px;
     width: 400px;
@@ -183,6 +204,8 @@ ol{
     padding: 30px;
     background: rgb(160, 245, 32);
     overflow: hidden;
+    position: absolute;
+
 
 }
 .card_img{
@@ -198,7 +221,7 @@ img.card_image{
     height: auto;
     position: absolute;
     width: 340px;
-    top: 400px;
+    top: 300px;
 }
 .card_title{
     font-weight: 600;
@@ -287,13 +310,13 @@ img.card_image{
     transition: .5s ease;
 }
 .card:hover .card_img{
-    
+    position: absolute;
     transform: rotate(-20deg);
-    top: -1rem;
+    top: -2rem;
 
 }
 .card:hover .card_info{
-    top: 300px;
+    top: 170px;
 }
 
 .card:hover .card_price{
@@ -307,7 +330,7 @@ font-weight: 100;
 }
 .card:hover .card_product_details{
     opacity: 1;
-    top: 450px;
+    top: 330px;
 
 }
 .card_size:hover{
@@ -321,4 +344,109 @@ font-weight: 100;
     transform: scale(1.1);
     color: white;
     border:2px solid black;
+}
+
+
+
+
+
+
+
+.bars{
+    display: none;
+    position: absolute;
+    color: ghostwhite;
+    right: 10px;
+    padding: 13.2px;
+    border-radius: 5px;
+    background-color: rgb(2, 28, 19);
+    cursor: pointer;
+}
+.bars:hover{
+    background-color: white;
+    color: black;
+}
+
+
+
+
+
+/* media query */
+@media screen and (max-width:600px){
+    ul.navbar{
+        display: none;
+    }
+    .bars{
+        display: block;
+    }
+    .about-me{
+        margin-bottom: 20px;
+    }
+
+    .about-us{
+        padding: 0;
+
+    }
+ 
+    .name.service{
+        margin-top: -100px;
+        margin-bottom: 20px;
+        font-size: 30px;
+    }
+
+    .main-design-block{
+        display: block;
+        margin-top: auto;
+    }
+
+    .design{
+        margin-bottom: 20px;
+        width: 400px;
+        padding-top: 20px;
+    }
+    
+}
+
+@media screen and (min-width:600px) {
+    .name.service{
+        margin-top: -100px;
+        margin-bottom: 20px;
+        font-size: 50px;
+    }
+
+    .main-design-block{
+        display: block;
+        margin-top: auto;
+    }
+
+    .design{
+        margin-bottom: 20px;
+        width: auto;
+        padding-top: 20px;
+    }
+    
+}
+@media screen and (min-width:800px) {
+    .name.service{
+        margin-top: -100px;
+        margin-bottom: 20px;
+        font-size: 80px;
+    }
+
+    .design{
+
+        border-radius: 15px;
+        width: 300px;
+        border: 3px solid var(--main-color);
+        background: rgb(41, 8, 49);
+        margin-right: 30px;
+        padding: 80px 10px 10px 10px ;
+    }
+    .main-design-block{
+        display: flex;
+        flex-direction: row;
+        margin-top: 60px;
+        margin-left: 0px;
+    }
+    
 }
