--- a/page.css
+++ b/page.css
@@ -73,7 +73,7 @@ section{
 
 .home{
     font-weight: bolder;
-    background-color: rgb(167, 167, 19);
+    background-color: rgb(0, 0, 0);
 }
 
 .home-text{
@@ -113,7 +113,7 @@ a.btn:hover{
 
 /*about us*/
 .about{
-    background-color: green;
+    background-color: rgb(0, 0, 0);
 }
 
 .about-us{
@@ -142,7 +142,7 @@ li.feature{
 }
 /*services*/
 .service{
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -172,7 +172,7 @@ li.feature{
 
 /*shoe design*/
 .portfolioi{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
 }
 .card{
     height: 550px;
@@ -309,6 +309,7 @@ font-weight: 100;
     opacity: 1;
     top: 330px;
 
+
 }
 .card_size:hover{
     color: white;
@@ -322,7 +323,9 @@ font-weight: 100;
     color: white;
     border:2px solid black;
 }
-
+.card:hover{
+    overflow: visible;
+}
 
 
 
@@ -426,4 +429,12 @@ font-weight: 100;
         margin-left: 0px;
     }
     
+}
+
+
+
+/* section experiment */
+.experiment{
+    min-height: 230px;
+    background-color: white;
 }
